maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:3: error: not found: value KeeepHandOnSideWall
    KeeepHandOnSideWall()
    ^